--- a/src/main/resources/themes/default/main.fxml
+++ b/src/main/resources/themes/default/main.fxml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -18,7 +14,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-
 <VBox fx:id="mainRoot" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.main.MainController">
   <children>
     <TabPane fx:id="mainTabPane" side="BOTTOM" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
@@ -105,7 +100,7 @@
     </TabPane>
       <HBox styleClass="status-bar">
          <children>
-            <Label styleClass="status-bar-label" text="%statusbar.nat" />
+            <Label fx:id="natStatusLabel" styleClass="status-bar-label" text="%statusbar.nat" />
             <Pane HBox.hgrow="ALWAYS" />
             <Label styleClass="status-bar-label" text="&lt;Ladder Game Available&gt;" />
             <Pane HBox.hgrow="ALWAYS" />
