--- a/src/main/resources/themes/default/window.fxml
+++ b/src/main/resources/themes/default/window.fxml
@@ -8,12 +8,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="windowRoot" onMouseClicked="#onMouseClicked" onMouseDragged="#onWindowDrag" onMousePressed="#onDragStarted" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.fx.WindowDecorator">
+<AnchorPane fx:id="windowRoot" minHeight="50.0" minWidth="100.0" onMouseClicked="#onMouseClicked" onMouseDragged="#onMouseDragged" onMouseMoved="#onMouseMoved" onMousePressed="#onMousePressed" onMouseReleased="#onMouseReleased" styleClass="decorated-window" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.fx.WindowDecorator">
   <children>
-    <Pane fx:id="resizePane" onMouseDragged="#onWindowResize" onMouseMoved="#updateResizeCursor" onMousePressed="#onStartWindowResize" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-    <AnchorPane fx:id="contentPane" layoutY="25.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+    <AnchorPane fx:id="contentPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
 
-    <HBox alignment="TOP_RIGHT" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+    <HBox fx:id="windowButtons" alignment="TOP_RIGHT" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="1.0">
       <children>
 
         <Button fx:id="minimizeButton" onAction="#onMinimizeButtonClicked" styleClass="window-button" />
