--- a/src/main/resources/themes/default/create_game_dialog.fxml
+++ b/src/main/resources/themes/default/create_game_dialog.fxml
@@ -11,7 +11,7 @@
 
 <VBox fx:id="createGameRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
       prefHeight="500.0" prefWidth="400.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.40"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.games.CreateGameDialogController">
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.CreateGameDialogController">
   <children>
     <Label text="%games.create" />
     <TextField fx:id="titleTextField" promptText="%game.title"/>
