--- a/src/main/resources/themes/default/channel_tab.fxml
+++ b/src/main/resources/themes/default/channel_tab.fxml
@@ -1,77 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
-<?import javafx.geometry.*?>
+<?import javafx.scene.web.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.web.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.web.WebView?>
 
 <fx:root type="Tab" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
-  <AnchorPane>
-    <children>
-      <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <center>
-          <SplitPane dividerPositions="0.8">
-            <items>
-              <WebView fx:id="messagesWebView" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-              <VBox SplitPane.resizableWithParent="false">
-                <children>
-                  <TextField promptText="%chat.searchPrompt" />
-                  <ScrollPane fitToWidth="true">
-                    <content>
-                      <VBox fx:id="usersVBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-                        <children>
-                          <TitledPane maxWidth="1.7976931348623157E308" text="%chat.category.moderators">
-                            <content>
-                              <VBox fx:id="moderatorsPane" />
-                            </content>
-                          </TitledPane>
-                          <TitledPane maxWidth="1.7976931348623157E308" text="%chat.category.friends">
-                            <content>
-                              <VBox fx:id="friendsPane" />
-                            </content>
-                          </TitledPane>
-                          <TitledPane maxWidth="1.7976931348623157E308" text="%chat.category.others">
-                            <content>
-                              <VBox fx:id="othersPane" />
-                            </content>
-                          </TitledPane>
-                          <TitledPane maxWidth="1.7976931348623157E308" text="%chat.category.irc">
-                            <content>
-                              <VBox fx:id="chatOnlyPane" />
-                            </content>
-                          </TitledPane>
-                          <TitledPane maxWidth="1.7976931348623157E308" text="%chat.category.foes">
-                            <content>
-                              <VBox fx:id="foesPane" />
-                            </content>
-                          </TitledPane>
-                        </children>
-                      </VBox>
-                    </content>
-                  </ScrollPane>
-                </children>
-              </VBox>
-            </items>
-          </SplitPane>
-        </center>
-        <bottom>
-          <TextField fx:id="messageTextField" onAction="#onSendMessage" promptText="%chat.messagePrompt">
-            <BorderPane.margin>
-              <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-            </BorderPane.margin>
-          </TextField>
-        </bottom>
-      </BorderPane>
-    </children>
-  </AnchorPane>
+   <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+      <children>
+    <SplitPane dividerPositions="0.8" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+      <items>
+        <WebView fx:id="messagesWebView" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+        <VBox maxHeight="1.7976931348623157E308" SplitPane.resizableWithParent="false">
+          <children>
+            <TextField fx:id="userSearchTextField" promptText="%chat.searchPrompt" />
+            <ScrollPane fitToWidth="true" VBox.vgrow="ALWAYS">
+              <content>
+                <VBox fx:id="usersVBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+                  <children>
+                    <TitledPane maxWidth="1.7976931348623157E308" text="%chat.category.moderators">
+                      <content>
+                        <VBox fx:id="moderatorsPane" />
+                      </content>
+                    </TitledPane>
+                    <TitledPane maxWidth="1.7976931348623157E308" text="%chat.category.friends">
+                      <content>
+                        <VBox fx:id="friendsPane" />
+                      </content>
+                    </TitledPane>
+                    <TitledPane maxWidth="1.7976931348623157E308" text="%chat.category.others">
+                      <content>
+                        <VBox fx:id="othersPane" />
+                      </content>
+                    </TitledPane>
+                    <TitledPane maxWidth="1.7976931348623157E308" text="%chat.category.irc">
+                      <content>
+                        <VBox fx:id="chatOnlyPane" />
+                      </content>
+                    </TitledPane>
+                    <TitledPane maxWidth="1.7976931348623157E308" text="%chat.category.foes">
+                      <content>
+                        <VBox fx:id="foesPane" />
+                      </content>
+                    </TitledPane>
+                  </children>
+                </VBox>
+              </content>
+            </ScrollPane>
+          </children>
+        </VBox>
+      </items>
+    </SplitPane>
+    <TextField fx:id="messageTextField" maxWidth="1.7976931348623157E308" onAction="#onSendMessage" promptText="%chat.messagePrompt" />
+      </children>
+   </VBox>
 </fx:root>
