--- a/src/main/resources/themes/default/chat.fxml
+++ b/src/main/resources/themes/default/chat.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
+<AnchorPane fx:id="chatRoot" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.faforever.client.chat.ChatController">
   <children>
     <TabPane fx:id="chatsTabPane"
