--- a/src/main/resources/themes/default/main.fxml
+++ b/src/main/resources/themes/default/main.fxml
@@ -1,114 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Pagination?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="mainRoot" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.main.MainController">
+<VBox fx:id="mainRoot" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.main.MainController">
   <children>
-      <HBox VBox.vgrow="NEVER">
+      <HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="main-navigation" VBox.vgrow="NEVER">
          <children>
-            <Button mnemonicParsing="false" styleClass="menu-button" />
+            <MenuButton mnemonicParsing="false" text="MenuButton">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+                <MenuItem mnemonicParsing="false" text="Action 2" />
+              </items>
+            </MenuButton>
+            <ToggleButton fx:id="newsButton" mnemonicParsing="false" onAction="#onNewsButton" selected="true" text="%main.news">
+               <toggleGroup>
+                  <ToggleGroup fx:id="mainNavigation" />
+               </toggleGroup>
+            </ToggleButton>
+            <ToggleButton fx:id="chatButton" mnemonicParsing="false" onAction="#onChatButton" text="%main.chat" toggleGroup="$mainNavigation" />
+            <ToggleButton fx:id="gamesButton" mnemonicParsing="false" onAction="#onGamesButton" text="%main.games" toggleGroup="$mainNavigation" />
+            <ToggleButton fx:id="vaultButton" mnemonicParsing="false" onAction="#onVaultButton" text="%main.vault" toggleGroup="$mainNavigation" />
+            <ToggleButton fx:id="leaderboardButton" mnemonicParsing="false" onAction="#onLeaderboardButton" text="%main.leaderboard"/>
+            <Pane HBox.hgrow="ALWAYS" />
          </children>
       </HBox>
-    <TabPane fx:id="mainTabPane" side="BOTTOM" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
-      <tabs>
-        <Tab fx:id="whatsNewTab" text="%main.whatsNew">
-          <fx:include fx:id="whatsNew" source="whats_new.fxml" />
-        </Tab>
-        <Tab fx:id="chatTab" text="%main.chatLobby">
-          <fx:include fx:id="chat" source="chat.fxml" />
-        </Tab>
-        <Tab text="%main.coopMissions" />
-        <Tab fx:id="gamesTab" text="%main.games">
-          <fx:include fx:id="games" source="games.fxml" />
-        </Tab>
-        <Tab fx:id="tutorialsTab" text="Tutorials" />
-        <Tab fx:id="leaderboardTab" text="Leaderboards" />
-        <Tab fx:id="tournamentsTab" text="Tournaments" />
-        <Tab fx:id="liveSreamsTab" text="Live streams" />
-        <Tab fx:id="replaysTab" text="Replays">
-          <content>
-            <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
-              <tabs>
-                <Tab text="Live Games">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                </Tab>
-                <Tab text="Local archive">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                </Tab>
-                <Tab text="Online vault">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                </Tab>
-              </tabs>
-            </TabPane>
-          </content>
-        </Tab>
-        <Tab fx:id="vaultsTab" text="Vaults">
-          <content>
-            <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
-              <tabs>
-                <Tab text="Maps">
-                  <content>
-                    <BorderPane prefHeight="200.0" prefWidth="200.0">
-                      <center>
-                        <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                          <columns>
-                            <TableColumn editable="false" prefWidth="75.0" text="Name" />
-                            <TableColumn editable="false" prefWidth="75.0" text="Size" />
-                            <TableColumn editable="false" prefWidth="75.0" text="Players" />
-                            <TableColumn editable="false" prefWidth="75.0" text="Version" />
-                            <TableColumn editable="false" prefWidth="75.0" text="Comments" />
-                            <TableColumn editable="false" prefWidth="75.0" text="Downloads" />
-                            <TableColumn editable="false" prefWidth="75.0" text="Ratings" />
-                            <TableColumn editable="false" prefWidth="75.0" text="Plays" />
-                          </columns>
-                        </TableView>
-                      </center>
-                      <top>
-                        <HBox prefHeight="0.0" prefWidth="827.0" BorderPane.alignment="CENTER">
-                          <children>
-                            <Pane prefHeight="0.0" prefWidth="678.0" HBox.hgrow="ALWAYS" />
-                            <TextField />
-                            <Button mnemonicParsing="false" text="Search" />
-                          </children>
-                        </HBox>
-                      </top>
-                      <bottom>
-                        <Pagination prefHeight="0.0" BorderPane.alignment="TOP_CENTER" />
-                      </bottom>
-                    </BorderPane>
-                  </content>
-                </Tab>
-                <Tab text="Mods" />
-              </tabs>
-            </TabPane>
-          </content>
-        </Tab>
-      </tabs>
-    </TabPane>
+      <AnchorPane fx:id="contentPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
       <HBox styleClass="status-bar">
          <children>
             <Label fx:id="natStatusLabel" styleClass="status-bar-label" text="%statusbar.nat" />
